mobile fix for the orbit-indicator, as well as moving the js to appropriate file, tested on IE, chrome, firefox

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -468,5 +468,9 @@ footer  {
 		}
 	}
 
+	.orbit .orbit-indicator {
+    	bottom: 0.5em;
+	}
+
 }
 
